--- a/helm/cluster-api/templates/bootstrap/deployment.yaml
+++ b/helm/cluster-api/templates/bootstrap/deployment.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - args:
-        - --metrics-bind-addr=0.0.0.0:8080
+        - --metrics-addr=0.0.0.0:8080
         - --webhook-port=9443
         - --feature-gates=MachinePool=true
         - --watch-filter=capi
