Fix feature flags

--- a/config/helm/deployment-args.yaml
+++ b/config/helm/deployment-args.yaml
@@ -12,7 +12,7 @@ spec:
           args:
             - --metrics-addr=0.0.0.0:8080
             - --webhook-port=9443
-            - --feature-gates=MachinePool=true,ClusterResourceSet=true,ClusterTopology=true
+            - --feature-gates=MachinePool=true,ClusterResourceSet=true
             - --watch-filter=capi
             - --v=0
 ---
@@ -46,6 +46,5 @@ spec:
           args:
             - --metrics-addr=0.0.0.0:8080
             - --webhook-port=9443
-            - --feature-gates=ClusterTopology=true
             - --watch-filter=capi
             - --v=0
