--- a/helm/cluster-api/values.yaml
+++ b/helm/cluster-api/values.yaml
@@ -8,7 +8,7 @@ images:
     name: giantswarm/kubeadm-bootstrap-controller
   controlplane:
     name: giantswarm/kubeadm-control-plane-controller
-  tag: v0.3.22
+  tag: v0.3.22-gs3
 
 project:
   branch: "[[ .Branch ]]"
