--- a/helm/cluster-api/templates/core/deployment.yaml
+++ b/helm/cluster-api/templates/core/deployment.yaml
@@ -35,8 +35,8 @@ spec:
         - --v=0
         command:
         - /manager
-        image: us.gcr.io/k8s-artifacts-prod/cluster-api/cluster-api-controller:v0.3.22
-        imagePullPolicy: IfNotPresent
+        image: '{{ .Values.registry.domain }}/{{ .Values.images.core.name }}:{{ .Values.images.tag }}'
+        imagePullPolicy: Always
         livenessProbe:
           httpGet:
             path: /healthz
