--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -30,6 +30,7 @@ patchesStrategicMerge:
   - deployment-args.yaml
   - deployment-metrics-port.yaml
   - deployment-labels.yaml
+  - deployment-imagepullpolicy.yaml
   - webhook-watchfilter.yaml
   - webhook-certificate.yaml
   - service-add-metrics-port.yaml
