--- a/helm/cluster-api/templates/bootstrap/deployment.yaml
+++ b/helm/cluster-api/templates/bootstrap/deployment.yaml
@@ -36,7 +36,7 @@ spec:
         command:
         - /manager
         image: '{{ .Values.registry.domain }}/{{ .Values.images.bootstrap.name }}:{{ .Values.images.tag }}'
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: manager
         ports:
         - containerPort: 8080
