--- a/helm/cluster-api/templates/core/deployment.yaml
+++ b/helm/cluster-api/templates/core/deployment.yaml
@@ -18,11 +18,15 @@ spec:
   replicas: 1
   selector:
     matchLabels:
+      app.kubernetes.io/name: '{{ .Values.name }}'
+      app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
       cluster.x-k8s.io/provider: cluster-api
       control-plane: controller-manager
   template:
     metadata:
       labels:
+        app.kubernetes.io/name: '{{ .Values.name }}'
+        app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
         cluster.x-k8s.io/provider: cluster-api
         control-plane: controller-manager
     spec:
