--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -22,6 +22,7 @@ transformers:
 patchesStrategicMerge:
   - deployment-args.yaml
   - deployment-metrics-port.yaml
+  - deployment-labels.yaml
   - delete-capi-system-ns.yaml
   - delete-capi-kubeadm-control-plane-system-ns.yaml
   - delete-capi-kubeadm-bootstrap-system-ns.yaml
