Fix deployments images

--- a/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-bootstrap-controller-manager.yaml
+++ b/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-bootstrap-controller-manager.yaml
@@ -34,8 +34,7 @@ spec:
         - --v=0
         command:
         - /manager
-        image: '{{ .Values.registry.domain }}/{{ .Values.images.bootstrap.name }}:{{
-          .Values.images.tag }}'
+        image: '{{ .Values.registry.domain }}/{{ .Values.images.bootstrap.name }}:{{ .Values.images.tag }}'
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
