Add deploy component label (#29)
* Add component label to Deployments

* Improve github PR template

* Remove unnecesary files

* Fix deployments images

* Remove unnecesary files using kustomize

* Update CHANGELOG.md

Co-authored-by: Paweł Kopiczko <pawel@giantswarm.io>

* Remove spaces from images to avoid kustomize bug

* Added make verify to make sure manifests are up to date

* Add Github action to verify manifests

Co-authored-by: Paweł Kopiczko <pawel@giantswarm.io>

--- a/config/helm/delete-leader-election.yaml
+++ b/config/helm/delete-leader-election.yaml
@@ -1,4 +1,4 @@
-# We are not using leader election in our current v0.3.x release, since we are
+# We are not using leader election in our current release, since we are
 # only deploying a single webhook pod.
 ---
 $patch: delete
