Add deploy component label (#29)
* Add component label to Deployments

* Improve github PR template

* Remove unnecesary files

* Fix deployments images

* Remove unnecesary files using kustomize

* Update CHANGELOG.md

Co-authored-by: Paweł Kopiczko <pawel@giantswarm.io>

* Remove spaces from images to avoid kustomize bug

* Added make verify to make sure manifests are up to date

* Add Github action to verify manifests

Co-authored-by: Paweł Kopiczko <pawel@giantswarm.io>

--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -5,14 +5,14 @@ resources:
 
 images:
   - name: k8s.gcr.io/cluster-api/cluster-api-controller
-    newName: "{{ .Values.registry.domain }}/{{ .Values.images.core.name }}"
-    newTag: "{{ .Values.images.tag }}"
+    newName: "{{.Values.registry.domain}}/{{.Values.images.core.name}}"
+    newTag: "{{.Values.images.tag}}"
   - name: k8s.gcr.io/cluster-api/kubeadm-bootstrap-controller
-    newName: "{{ .Values.registry.domain }}/{{ .Values.images.bootstrap.name }}"
-    newTag: "{{ .Values.images.tag }}"
+    newName: "{{.Values.registry.domain}}/{{.Values.images.bootstrap.name}}"
+    newTag: "{{.Values.images.tag}}"
   - name: k8s.gcr.io/cluster-api/kubeadm-control-plane-controller
-    newName: "{{ .Values.registry.domain }}/{{ .Values.images.controlplane.name }}"
-    newTag: "{{ .Values.images.tag }}"
+    newName: "{{.Values.registry.domain}}/{{.Values.images.controlplane.name}}"
+    newTag: "{{.Values.images.tag}}"
 
 transformers:
   - common-labels.yaml
@@ -22,10 +22,12 @@ transformers:
 patchesStrategicMerge:
   - deployment-args.yaml
   - deployment-metrics-port.yaml
-  - delete-capi-system-ns.yaml
-  - delete-capi-kubeadm-control-plane-system-ns.yaml
-  - delete-capi-kubeadm-bootstrap-system-ns.yaml
+  - deployment-labels.yaml
   - webhook-watchfilter.yaml
   - webhook-certificate.yaml
   - service-add-metrics-port.yaml
   - certificate.yaml
+  - delete-leader-election.yaml
+  - delete-capi-system-ns.yaml
+  - delete-capi-kubeadm-control-plane-system-ns.yaml
+  - delete-capi-kubeadm-bootstrap-system-ns.yaml
