--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -5,13 +5,13 @@ resources:
 
 images:
   - name: gcr.io/k8s-staging-cluster-api/cluster-api-controller
-    newName: "{{ .Values.registry.domain }}/{{ .Values.images.core.name }}"
+    newName: "{{ .Values.images.core.name }}"
     newTag: "{{ .Values.images.tag }}"
   - name: gcr.io/k8s-staging-cluster-api/kubeadm-bootstrap-controller
-    newName: "{{ .Values.registry.domain }}/{{ .Values.images.bootstrap.name }}"
+    newName: "{{ .Values.images.bootstrap.name }}"
     newTag: "{{ .Values.images.tag }}"
   - name: gcr.io/k8s-staging-cluster-api/kubeadm-control-plane-controller
-    newName: "{{ .Values.registry.domain }}/{{ .Values.images.controlplane.name }}"
+    newName: "{{ .Values.images.controlplane.name }}"
     newTag: "{{ .Values.images.tag }}"
 
 transformers:
