--- a/helm/cluster-api/templates/bootstrap/deployment.yaml
+++ b/helm/cluster-api/templates/bootstrap/deployment.yaml
@@ -35,7 +35,7 @@ spec:
         - --v=0
         command:
         - /manager
-        image: '{{ .Values.registry.domain }}/{{ .Values.images.bootstrap.name }}:{{ .Values.images.tag }}'
+        image: '{{ .Values.images.bootstrap.name }}:{{ .Values.images.tag }}'
         imagePullPolicy: IfNotPresent
         name: manager
         ports:
