Restart cluster-operator after updating CRDs

--- a/helm/cluster-api/templates/crd-install/crd-rbac.yaml
+++ b/helm/cluster-api/templates/crd-install/crd-rbac.yaml
@@ -37,6 +37,15 @@ rules:
   - {{ include "cluster-api.crdInstall" . }}
   verbs:
   - use
+- apiGroups:
+  - apps
+  - extensions
+  resources:
+  - deployments
+  verbs:
+  - get
+  - patch
+  - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
