--- a/helm/cluster-api/templates/v1_serviceaccount_helm-hook-delete-aggregated-roles.yaml
+++ b/helm/cluster-api/templates/v1_serviceaccount_helm-hook-delete-aggregated-roles.yaml
@@ -1,6 +1,9 @@
-apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+apiVersion: v1
+kind: ServiceAccount
 metadata:
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "-2"
   labels:
     app.giantswarm.io/branch: '{{ .Values.project.branch }}'
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
@@ -9,16 +12,5 @@ metadata:
     app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
     helm.sh/chart: cluster-api
-  annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-weight": "-2"
   name: helm-hook-delete-aggregated-roles
   namespace: '{{ .Release.Namespace }}'
-rules:
-  - apiGroups:
-      - rbac.authorization.k8s.io
-    resources:
-      - clusterroles
-    verbs:
-      - delete
-      - get
