--- a/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrolebinding_helm-hook-delete-aggregated-roles.yaml
+++ b/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrolebinding_helm-hook-delete-aggregated-roles.yaml
@@ -1,6 +1,9 @@
-apiVersion: v1
-kind: ServiceAccount
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
+  annotations:
+    helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-weight: "-1"
   labels:
     app.giantswarm.io/branch: '{{ .Values.project.branch }}'
     app.giantswarm.io/commit: '{{ .Values.project.commit }}'
@@ -9,8 +12,12 @@ metadata:
     app.kubernetes.io/name: cluster-api
     app.kubernetes.io/version: '{{ .Chart.AppVersion }}'
     helm.sh/chart: cluster-api
-  annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
-    "helm.sh/hook-weight": "-2"
+  name: helm-hook-delete-aggregated-roles
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: helm-hook-delete-aggregated-roles
+subjects:
+- kind: ServiceAccount
   name: helm-hook-delete-aggregated-roles
   namespace: '{{ .Release.Namespace }}'
