--- a/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrolebinding_helm-hook-delete-aggregated-roles.yaml
+++ b/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrolebinding_helm-hook-delete-aggregated-roles.yaml
@@ -3,6 +3,7 @@ kind: ClusterRoleBinding
 metadata:
   annotations:
     helm.sh/hook: pre-install,pre-upgrade
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded,hook-failed
     helm.sh/hook-weight: "-1"
   labels:
     app.giantswarm.io/branch: '{{ .Values.project.branch }}'
