--- a/helm/cluster-api/templates/hook-delete-aggregated-roles/job.yaml
+++ b/helm/cluster-api/templates/hook-delete-aggregated-roles/job.yaml
@@ -3,7 +3,7 @@ kind: Job
 metadata:
   annotations:
     helm.sh/hook: pre-install,pre-upgrade
-    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded,hook-failed
+    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
     helm.sh/hook-weight: "0"
   labels:
     app.giantswarm.io/branch: '{{ .Values.project.branch }}'
