Dont fail if resources are not there when deleting

--- a/helm/cluster-api/templates/hook-delete-aggregated-roles/job.yaml
+++ b/helm/cluster-api/templates/hook-delete-aggregated-roles/job.yaml
@@ -24,8 +24,8 @@ spec:
         - /bin/sh
         - -ec
         - |
-          kubectl delete clusterrole capi-kubeadm-control-plane-aggregated-manager-role
-          kubectl delete clusterrole capi-aggregated-manager-role
+          kubectl delete clusterrole capi-kubeadm-control-plane-aggregated-manager-role --ignore-not-found
+          kubectl delete clusterrole capi-aggregated-manager-role --ignore-not-found
         image: '{{ .Values.registry.domain }}/giantswarm/docker-kubectl:1.23.1'
         name: delete-roles
       restartPolicy: Never
