--- a/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-bootstrap-controller-manager.yaml
+++ b/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-bootstrap-controller-manager.yaml
@@ -29,7 +29,7 @@ spec:
       containers:
       - args:
         - --metrics-bind-addr=0.0.0.0:8080
-        - --feature-gates=MachinePool=true
+        - --feature-gates=MachinePool=true,KubeadmBootstrapFormatIgnition=true
         - --watch-filter=capi
         - --v=0
         command:
