--- a/config/helm/kustomization.yaml
+++ b/config/helm/kustomization.yaml
@@ -12,7 +12,7 @@ images:
     newTag: "{{ .Values.images.bTag }}"
   - name: k8s.gcr.io/cluster-api/kubeadm-control-plane-controller
     newName: "{{ .Values.images.controlplane.name }}"
-    newTag: "{{ .Values.images.tag }}"
+    newTag: "{{ .Values.images.bTag }}"
 
 transformers:
   - common-labels.yaml
