--- a/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-control-plane-controller-manager.yaml
+++ b/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-control-plane-controller-manager.yaml
@@ -34,7 +34,7 @@ spec:
         - --v=0
         command:
         - /manager
-        image: '{{ .Values.images.controlplane.name }}:{{ .Values.images.tag }}'
+        image: '{{ .Values.images.controlplane.name }}:{{ .Values.images.bTag }}'
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
