--- a/helm/cluster-api/templates/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_zzz-capi-mutating-webhook-configuration.yaml
+++ b/helm/cluster-api/templates/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_zzz-capi-mutating-webhook-configuration.yaml
@@ -25,9 +25,11 @@ webhooks:
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.cluster.cluster.x-k8s.io
+{{ if .Values.watchFilter }}
   objectSelector:
     matchLabels:
-      cluster.x-k8s.io/watch-filter: capi
+      cluster.x-k8s.io/watch-filter: '{{ .Values.watchFilter }}'
+{{ end }}
   rules:
   - apiGroups:
     - cluster.x-k8s.io
@@ -50,9 +52,11 @@ webhooks:
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.clusterclass.cluster.x-k8s.io
+{{ if .Values.watchFilter }}
   objectSelector:
     matchLabels:
-      cluster.x-k8s.io/watch-filter: capi
+      cluster.x-k8s.io/watch-filter: '{{ .Values.watchFilter }}'
+{{ end }}
   rules:
   - apiGroups:
     - cluster.x-k8s.io
@@ -75,9 +79,11 @@ webhooks:
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.machine.cluster.x-k8s.io
+{{ if .Values.watchFilter }}
   objectSelector:
     matchLabels:
-      cluster.x-k8s.io/watch-filter: capi
+      cluster.x-k8s.io/watch-filter: '{{ .Values.watchFilter }}'
+{{ end }}
   rules:
   - apiGroups:
     - cluster.x-k8s.io
@@ -100,9 +106,11 @@ webhooks:
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.machinedeployment.cluster.x-k8s.io
+{{ if .Values.watchFilter }}
   objectSelector:
     matchLabels:
-      cluster.x-k8s.io/watch-filter: capi
+      cluster.x-k8s.io/watch-filter: '{{ .Values.watchFilter }}'
+{{ end }}
   rules:
   - apiGroups:
     - cluster.x-k8s.io
@@ -125,9 +133,11 @@ webhooks:
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.machinehealthcheck.cluster.x-k8s.io
+{{ if .Values.watchFilter }}
   objectSelector:
     matchLabels:
-      cluster.x-k8s.io/watch-filter: capi
+      cluster.x-k8s.io/watch-filter: '{{ .Values.watchFilter }}'
+{{ end }}
   rules:
   - apiGroups:
     - cluster.x-k8s.io
@@ -150,9 +160,11 @@ webhooks:
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.machineset.cluster.x-k8s.io
+{{ if .Values.watchFilter }}
   objectSelector:
     matchLabels:
-      cluster.x-k8s.io/watch-filter: capi
+      cluster.x-k8s.io/watch-filter: '{{ .Values.watchFilter }}'
+{{ end }}
   rules:
   - apiGroups:
     - cluster.x-k8s.io
@@ -175,9 +187,11 @@ webhooks:
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.machinepool.cluster.x-k8s.io
+{{ if .Values.watchFilter }}
   objectSelector:
     matchLabels:
-      cluster.x-k8s.io/watch-filter: capi
+      cluster.x-k8s.io/watch-filter: '{{ .Values.watchFilter }}'
+{{ end }}
   rules:
   - apiGroups:
     - cluster.x-k8s.io
@@ -200,9 +214,11 @@ webhooks:
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: default.clusterresourceset.addons.cluster.x-k8s.io
+{{ if .Values.watchFilter }}
   objectSelector:
     matchLabels:
-      cluster.x-k8s.io/watch-filter: capi
+      cluster.x-k8s.io/watch-filter: '{{ .Values.watchFilter }}'
+{{ end }}
   rules:
   - apiGroups:
     - addons.cluster.x-k8s.io
