--- a/helm/cluster-api/templates/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_capi-kubeadm-bootstrap-validating-webhook-configuration.yaml
+++ b/helm/cluster-api/templates/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_capi-kubeadm-bootstrap-validating-webhook-configuration.yaml
@@ -25,9 +25,11 @@ webhooks:
   failurePolicy: Fail
   matchPolicy: Equivalent
   name: validation.kubeadmconfig.bootstrap.cluster.x-k8s.io
+{{ if .Values.watchFilter }}
   objectSelector:
     matchLabels:
-      cluster.x-k8s.io/watch-filter: capi
+      cluster.x-k8s.io/watch-filter: '{{ .Values.watchFilter }}'
+{{ end }}
   rules:
   - apiGroups:
     - bootstrap.cluster.x-k8s.io
