--- a/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-control-plane-controller-manager.yaml
+++ b/helm/cluster-api/templates/apps_v1_deployment_capi-kubeadm-control-plane-controller-manager.yaml
@@ -30,7 +30,7 @@ spec:
       - args:
         - --metrics-bind-addr=0.0.0.0:8080
         - --feature-gates=ClusterTopology=true
-        - --watch-filter=capi
+        - --watch-filter={{ .Values.watchFilter }}
         - --v=0
         command:
         - /manager
