--- a/helm/cluster-api/values.yaml
+++ b/helm/cluster-api/values.yaml
@@ -14,6 +14,8 @@ project:
   branch: "[[ .Branch ]]"
   commit: "[[ .SHA ]]"
 
+watchFilter: capi
+
 # We install CRDs through a Job with the helm specific crd folder.
 crds:
   install: true
