Update previous references to registry.domain
Signed-off-by: Marcus Noble <github@marcusnoble.co.uk>

--- a/helm/cluster-api/templates/crd-install/crd-job.yaml
+++ b/helm/cluster-api/templates/crd-install/crd-job.yaml
@@ -28,7 +28,7 @@ spec:
         effect: NoSchedule
       containers:
       - name: kubectl
-        image: "{{ .Values.registry.domain }}/giantswarm/docker-kubectl:latest"
+        image: "{{ .Values.images.domain }}/giantswarm/docker-kubectl:latest"
         command:
         - sh
         - -c
