--- a/helm/cluster-api/templates/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_capi-kubeadm-control-plane-validating-webhook-configuration.yaml
+++ b/helm/cluster-api/templates/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_capi-kubeadm-control-plane-validating-webhook-configuration.yaml
@@ -67,3 +67,29 @@ webhooks:
     resources:
     - kubeadmcontrolplanetemplates
   sideEffects: None
+- admissionReviewVersions:
+  - v1
+  - v1beta1
+  clientConfig:
+    service:
+      name: capi-kubeadm-control-plane-webhook-service
+      namespace: '{{ .Release.Namespace }}'
+      path: /validate-scale-controlplane-cluster-x-k8s-io-v1beta1-kubeadmcontrolplane
+  failurePolicy: Fail
+  matchPolicy: Equivalent
+  name: validation-scale.kubeadmcontrolplane.controlplane.cluster.x-k8s.io
+{{ if .Values.watchFilter }}
+  objectSelector:
+    matchLabels:
+      cluster.x-k8s.io/watch-filter: '{{ .Values.watchFilter }}'
+{{ end }}
+  rules:
+  - apiGroups:
+    - controlplane.cluster.x-k8s.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - UPDATE
+    resources:
+    - kubeadmcontrolplanes/scale
+  sideEffects: None
