--- a/helm/cluster-api/files/core/patches/versions/v1beta1/clusters.cluster.x-k8s.io.yaml
+++ b/helm/cluster-api/files/core/patches/versions/v1beta1/clusters.cluster.x-k8s.io.yaml
@@ -1,5 +1,5 @@
 - op: replace
-  path: /spec/versions/3/schema
+  path: /spec/versions/2/schema
   value:
     openAPIV3Schema:
       description: Cluster is the Schema for the clusters API.
@@ -145,6 +145,22 @@
                   description: RolloutAfter performs a rollout of the entire cluster one component at a time, control plane first and then machine deployments.
                   format: date-time
                   type: string
+                variables:
+                  description: Variables can be used to customize the Cluster through patches. They must comply to the corresponding VariableClasses defined in the ClusterClass.
+                  items:
+                    description: ClusterVariable can be used to customize the Cluster through patches. It must comply to the corresponding ClusterClassVariable defined in the ClusterClass.
+                    properties:
+                      name:
+                        description: Name of the variable.
+                        type: string
+                      value:
+                        description: 'Value of the variable. Note: the value will be validated against the schema of the corresponding ClusterClassVariable from the ClusterClass. Note: We have to use apiextensionsv1.JSON instead of a custom JSON type, because controller-tools has a hard-coded schema for apiextensionsv1.JSON which cannot be produced by another type via controller-tools, i.e. it is not possible to have no type field. Ref: https://github.com/kubernetes-sigs/controller-tools/blob/d0e03a142d0ecdd5491593e941ee1d6b5d91dba6/pkg/crd/known_types.go#L106-L111'
+                        x-kubernetes-preserve-unknown-fields: true
+                    required:
+                      - name
+                      - value
+                    type: object
+                  type: array
                 version:
                   description: The Kubernetes version of the cluster.
                   type: string
@@ -158,6 +174,9 @@
                         properties:
                           class:
                             description: Class is the name of the MachineDeploymentClass used to create the set of worker nodes. This should match one of the deployment classes defined in the ClusterClass object mentioned in the `Cluster.Spec.Class` field.
+                            type: string
+                          failureDomain:
+                            description: FailureDomain is the failure domain the machines will be created in. Must match a key in the FailureDomains map stored on the cluster object.
                             type: string
                           metadata:
                             description: Metadata is the metadata applied to the machines of the MachineDeployment. At runtime this metadata is merged with the corresponding metadata from the ClusterClass.
@@ -180,6 +199,26 @@
                             description: Replicas is the number of worker nodes belonging to this set. If the value is nil, the MachineDeployment is created without the number of Replicas (defaulting to zero) and it's assumed that an external entity (like cluster autoscaler) is responsible for the management of this value.
                             format: int32
                             type: integer
+                          variables:
+                            description: Variables can be used to customize the MachineDeployment through patches.
+                            properties:
+                              overrides:
+                                description: Overrides can be used to override Cluster level variables.
+                                items:
+                                  description: ClusterVariable can be used to customize the Cluster through patches. It must comply to the corresponding ClusterClassVariable defined in the ClusterClass.
+                                  properties:
+                                    name:
+                                      description: Name of the variable.
+                                      type: string
+                                    value:
+                                      description: 'Value of the variable. Note: the value will be validated against the schema of the corresponding ClusterClassVariable from the ClusterClass. Note: We have to use apiextensionsv1.JSON instead of a custom JSON type, because controller-tools has a hard-coded schema for apiextensionsv1.JSON which cannot be produced by another type via controller-tools, i.e. it is not possible to have no type field. Ref: https://github.com/kubernetes-sigs/controller-tools/blob/d0e03a142d0ecdd5491593e941ee1d6b5d91dba6/pkg/crd/known_types.go#L106-L111'
+                                      x-kubernetes-preserve-unknown-fields: true
+                                  required:
+                                    - name
+                                    - value
+                                  type: object
+                                type: array
+                            type: object
                         required:
                           - class
                           - name
