--- a/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-manager-role.yaml
+++ b/helm/cluster-api/templates/rbac.authorization.k8s.io_v1_clusterrole_capi-manager-role.yaml
@@ -157,6 +157,18 @@ rules:
   - cluster.x-k8s.io
   resources:
   - machinehealthchecks
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - cluster.x-k8s.io
+  resources:
+  - machinehealthchecks
   - machinehealthchecks/finalizers
   - machinehealthchecks/status
   verbs:
@@ -273,6 +285,7 @@ rules:
   - secrets
   verbs:
   - create
+  - delete
   - get
   - list
   - patch
